--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Azure Static Web App</h1>
+    <h1>Webアプリケーションテストです。</h1>
     <p>This is a simple static website hosted on Azure.</p>
 </body>
 </html>
