--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Azure Static Web App</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>社員検索</title>
+<style>
+body { font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif; max-width: 760px; margin: 40px auto; padding: 0 16px; }
+h1 { font-size: 22px; margin: 0 0 16px; }
+.row { display: flex; gap: 8px; }
+input { flex: 1; padding: 10px 12px; border: 1px solid #ddd; border-radius: 8px; }
+button { padding: 10px 14px; border: 1px solid #ccc; background: #fafafa; border-radius: 8px; cursor: pointer; }
+table { width:100%; border-collapse: collapse; margin-top: 16px; }
+th, td { text-align: left; padding: 10px 8px; border-bottom: 1px solid #eee; }
+tfoot td { color: #666; font-size: 13px; }
+</style>
 </head>
 <body>
-    <h1>Webアプリケーションテストです。</h1>
-    <p>This is a simple static website hosted on Azure.</p>
-</body>
+<h1>社員検索</h1>
+<div class="row">
+<input id="q" placeholder="社員番号・氏名・部署で検索" />
+<button id="btn">検索</button>
+</div>
+
+
+<table>
+<thead>
+<tr>
+<th>社員番号</th>
+<th>氏名</th>
+<th>部署</th>
+<th>Email</th>
+</tr>
+</thead>
+<tbody id="tbody">
+<tr><td colspan="4">読み込み中…</td></tr>
+</tbody>
+<tfoot>
+<tr><td colspan="4">※ データは App Service の API から取得します</td></tr>
+</tfoot>
+</table>
+
+
+<script>
+const tbody = document.getElementById('tbody');
+const q = document.getElementById('q');
+const btn = document.getElementById('btn');
+
+
+async function search(keyword = '') {
+tbody.innerHTML = `<tr><td colspan="4">読み込み中…</td></tr>`;
+try {
+const url = keyword ? `/api/employees?query=${encodeURIComponent(keyword)}` : `/api/employees`;
+const res = await fetch(url);
+const data = await res.json();
+if (!Array.isArray(data) || !data.length) {
+tbody.innerHTML = `<tr><td colspan="4">データがありません</td></tr>`;
+return;
+}
+tbody.innerHTML = data.map(r => `
+<tr>
 </html>
