--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>社員検索</h1>
+  <h1>AMITECH 社員検索</h1>
   <div class="row">
     <input id="q" placeholder="社員番号・氏名・部署で検索" />
     <button id="btn">検索</button>
