--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         tdNo.textContent = r.employee_no ?? '-';
 
         const tdName = document.createElement('td');
-        tdName.textContent = r.full_name ?? '-';
+        tdName.textContent = r.name ?? '-';
 
         const tdDept = document.createElement('td');
         tdDept.textContent = r.department ?? '-';
