--- a/index.html
+++ b/index.html
@@ -3,35 +3,74 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>社員検索</title>
+  <title>AMITECH 社員検索</title>
+
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif; max-width: 760px; margin: 40px auto; padding: 0 16px; }
-    h1 { font-size: 22px; margin: 0 0 16px; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans JP", sans-serif;
+      max-width: 760px;
+      margin: 40px auto;
+      padding: 0 16px;
+    }
+    h1 { font-size: 22px; margin-bottom: 16px; }
     .row { display: flex; gap: 8px; flex-wrap: wrap; }
-    input { flex: 1; min-width: 220px; padding: 10px 12px; border: 1px solid #ddd; border-radius: 8px; }
-    button { padding: 10px 14px; border: 1px solid #ccc; background: #fafafa; border-radius: 8px; cursor: pointer; }
+    input {
+      flex: 1;
+      min-width: 220px;
+      padding: 10px 12px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+    }
+    button {
+      padding: 10px 14px;
+      border: 1px solid #ccc;
+      background: #fafafa;
+      border-radius: 8px;
+      cursor: pointer;
+    }
     button:disabled { opacity: .6; cursor: not-allowed; }
-    .meta { margin-top: 10px; color: #666; font-size: 13px; display: flex; justify-content: space-between; gap: 8px; flex-wrap: wrap; }
-    table { width:100%; border-collapse: collapse; margin-top: 12px; }
-    th, td { text-align: left; padding: 10px 8px; border-bottom: 1px solid #eee; vertical-align: top; }
-    tfoot td { color: #666; font-size: 13px; }
-    .error { white-space: pre-wrap; word-break: break-word; color: #b00020; }
-    .muted { color:#666; }
-    .right { margin-left:auto; }
+
+    .meta {
+      margin-top: 10px;
+      font-size: 13px;
+      color: #666;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 12px;
+    }
+    th, td {
+      padding: 10px 8px;
+      border-bottom: 1px solid #eee;
+      text-align: left;
+    }
+    .muted { color: #666; }
+    .error { color: #b00020; white-space: pre-wrap; }
+
+    tfoot td {
+      font-size: 13px;
+      color: #666;
+    }
   </style>
 </head>
+
 <body>
   <h1>AMITECH 社員検索</h1>
 
   <div class="row">
-    <input id="q" placeholder="社員番号・氏名・部署で検索" autocomplete="off" />
+    <input id="q" placeholder="社員番号・氏名・部署で検索" />
     <button id="btn">検索</button>
-    <button id="clear" type="button">クリア</button>
+    <button id="clear">クリア</button>
   </div>
 
   <div class="meta">
-    <div id="status" class="muted">待機中</div>
-    <div id="count" class="muted"></div>
+    <div id="status">待機中</div>
+    <div id="count"></div>
   </div>
 
   <table>
@@ -47,137 +86,108 @@
       <tr><td colspan="4" class="muted">読み込み中…</td></tr>
     </tbody>
     <tfoot>
-      <tr><td colspan="4">※ データは App Service の API から取得します</td></tr>
+      <tr>
+        <td colspan="4">※ データは App Service の API から取得します</td>
+      </tr>
     </tfoot>
   </table>
 
-  <script>
-    const tbody = document.getElementById('tbody');
-    const q = document.getElementById('q');
-    const btn = document.getElementById('btn');
-    const clearBtn = document.getElementById('clear');
-    const statusEl = document.getElementById('status');
-    const countEl = document.getElementById('count');
+<script>
+/* ===== 設定 ===== */
+// ★ 必ず App Service の API ドメインを書く（相対パス禁止）
+const API_BASE = "amitechaps01-fnffcgc6chdybwaz.japanwest-01.azurewebsites.net";
 
-    let lastController = null;
+/* ===== DOM ===== */
+const tbody = document.getElementById("tbody");
+const q = document.getElementById("q");
+const btn = document.getElementById("btn");
+const clearBtn = document.getElementById("clear");
+const statusEl = document.getElementById("status");
+const countEl = document.getElementById("count");
 
-    function setLoading(isLoading) {
-      btn.disabled = isLoading;
-      clearBtn.disabled = isLoading;
-      q.disabled = isLoading;
-      statusEl.textContent = isLoading ? '検索中…' : '待機中';
-    }
+/* ===== 共通UI ===== */
+function showMessage(msg, isError = false) {
+  tbody.innerHTML =
+    `<tr><td colspan="4" class="${isError ? "error" : "muted"}">${msg}</td></tr>`;
+}
 
-    function showMessage(msg, isError = false) {
-      tbody.innerHTML = '';
-      const tr = document.createElement('tr');
-      const td = document.createElement('td');
-      td.colSpan = 4;
-      td.className = isError ? 'error' : 'muted';
-      td.textContent = msg;
-      tr.appendChild(td);
-      tbody.appendChild(tr);
-    }
+function setLoading(on) {
+  btn.disabled = on;
+  clearBtn.disabled = on;
+  q.disabled = on;
+  statusEl.textContent = on ? "検索中…" : "待機中";
+}
 
-    function renderRows(data) {
-      tbody.innerHTML = '';
-      for (const r of data) {
-        const tr = document.createElement('tr');
+/* ===== 表示 ===== */
+function renderRows(data) {
+  tbody.innerHTML = data.map(r => `
+    <tr>
+      <td>${r.employeeNo ?? "-"}</td>
+      <td>${r.name ?? "-"}</td>
+      <td>${r.department ?? "-"}</td>
+      <td>${r.email ?? "-"}</td>
+    </tr>
+  `).join("");
+}
 
-        const tdNo = document.createElement('td');
-        tdNo.textContent = r.employee_no ?? '-';
+/* ===== API ===== */
+async function search(keyword = "") {
+  setLoading(true);
+  countEl.textContent = "";
+  showMessage("読み込み中…");
 
-        const tdName = document.createElement('td');
-        tdName.textContent = r.name ?? '-';
+  const url = keyword
+    ? `${API_BASE}/api/employees?query=${encodeURIComponent(keyword)}`
+    : `${API_BASE}/api/employees`;
 
-        const tdDept = document.createElement('td');
-        tdDept.textContent = r.department ?? '-';
-
-        const tdMail = document.createElement('td');
-        tdMail.textContent = r.email ?? '-';
-
-        tr.append(tdNo, tdName, tdDept, tdMail);
-        tbody.appendChild(tr);
-      }
-    }
-
-    async function search(keyword = '') {
-      // 連打・Enter連発対策：前の通信をキャンセル
-      if (lastController) lastController.abort();
-      lastController = new AbortController();
-
-      setLoading(true);
-      countEl.textContent = '';
-      showMessage('読み込み中…');
-
-      try {
-        const API_BASE = 'amitechaps01-fnffcgc6chdybwaz.japanwest-01.azurewebsites.net';
-        const url = keyword
-          ? `/api/employees?query=${encodeURIComponent(keyword)}`
-          : `/api/employees`;
-
-        const res = await fetch(url, {
-          method: 'GET',
-          headers: { 'Accept': 'application/json' },
-          cache: 'no-store',
-          signal: lastController.signal
-        });
-
-        if (!res.ok) {
-          const text = await res.text().catch(() => '');
-          showMessage(`HTTP ${res.status} ${res.statusText}\n${text.substring(0, 600)}`, true);
-          return;
-        }
-
-        // JSONだけ読む（失敗時に備えて例外捕捉）
-        let data;
-        try {
-          data = await res.json();
-        } catch (e) {
-          const text = await res.text().catch(() => '');
-          showMessage(`JSON解析に失敗しました。\n${text.substring(0, 600)}`, true);
-          return;
-        }
-
-        if (!Array.isArray(data) || data.length === 0) {
-          showMessage('データがありません');
-          countEl.textContent = '0件';
-          return;
-        }
-
-        renderRows(data);
-        countEl.textContent = `${data.length}件`;
-        statusEl.textContent = keyword ? `「${keyword}」で検索` : '全件表示';
-      } catch (e) {
-        if (e?.name === 'AbortError') return; // キャンセルは無視
-        showMessage(`ネットワーク例外：${e?.message || e}`, true);
-      } finally {
-        setLoading(false);
-      }
-    }
-
-    function runSearch() {
-      search(q.value.trim());
-    }
-
-    btn.addEventListener('click', runSearch);
-
-    // Enterで検索（IME変換中は無視）
-    q.addEventListener('keydown', (e) => {
-      if (e.isComposing) return;
-      if (e.key === 'Enter') runSearch();
+  try {
+    const res = await fetch(url, {
+      headers: { "Accept": "application/json" },
+      cache: "no-store"
     });
 
-    clearBtn.addEventListener('click', () => {
-      q.value = '';
-      q.focus();
-      search('');
-    });
+    const ct = res.headers.get("content-type") || "";
 
-    window.addEventListener('DOMContentLoaded', () => {
-      q.focus();
-      search('');
-    });
-  </script>
+    // ★ JSON以外は即エラー表示（HTML誤返却対策）
+    if (!ct.includes("application/json")) {
+      const text = await res.text();
+      showMessage(
+        `JSONではありません\nURL: ${url}\nStatus: ${res.status}\nContent-Type: ${ct}\n---\n${text.substring(0,200)}`,
+        true
+      );
+      return;
+    }
+
+    const data = await res.json();
+
+    if (!Array.isArray(data) || data.length === 0) {
+      showMessage("データがありません");
+      countEl.textContent = "0件";
+      return;
+    }
+
+    renderRows(data);
+    countEl.textContent = `${data.length}件`;
+    statusEl.textContent = keyword ? `「${keyword}」で検索` : "全件表示";
+
+  } catch (e) {
+    showMessage(`通信エラー: ${e.message}`, true);
+  } finally {
+    setLoading(false);
+  }
+}
+
+/* ===== イベント ===== */
+btn.addEventListener("click", () => search(q.value.trim()));
+clearBtn.addEventListener("click", () => { q.value = ""; q.focus(); search(""); });
+q.addEventListener("keydown", e => { if (e.key === "Enter") search(q.value.trim()); });
+
+/* 初回ロード */
+window.addEventListener("DOMContentLoaded", () => {
+  q.focus();
+  search("");
+});
+</script>
+
 </body>
 </html>
