--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <script>
 /* ===== 設定 ===== */
 // ★ 必ず App Service の API ドメインを書く（相対パス禁止）
-const API_BASE = "https://amitechAPS01.azurewebsites.net";
+const API_BASE = "https://amitechaps01-fnffcgc6chdybwaz.japanwest-01.azurewebsites.net";
 
 /* ===== DOM ===== */
 const tbody = document.getElementById("tbody");
