--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 <script>
 /* ===== 設定 ===== */
-// ★ 必ず App Service の API ドメインを書く（相対パス禁止）
-const API_BASE = "https://amitechaps01-fnffcgc6chdybwaz.japanwest-01.azurewebsites.net";
+// 絶対パスを削除し、相対パスにする
+const API_BASE = "";
 
 /* ===== DOM ===== */
 const tbody = document.getElementById("tbody");
